[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

[dependencies]
bellman = "0.12.0"
ff = "0.12.0"

[dev-dependencies]
bls = { package = "bls12_381", version = "0.7.0"}
hex = "0.4.2"
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
sha2 = "0.10.6"
